--- a/src/FA.JustBlog/FA.JustBlog.WebMVC/Areas/Admin/Views/web.config
+++ b/src/FA.JustBlog/FA.JustBlog.WebMVC/Areas/Admin/Views/web.config
@@ -21,6 +21,7 @@
 				<add namespace="FA.JustBlog.Models.Security" />
 				<add namespace="FA.JustBlog.Models.Common" />
 				<add namespace="FA.JustBlog.WebMVC.ViewModels" />
+				<add namespace="FA.JustBlog.Common" />
 			</namespaces>
 		</pages>
 	</system.web.webPages.razor>
