Add data for Comment

--- a/src/FA.JustBlog/FA.JustBlog.Data/FA.JustBlog.Data.csproj
+++ b/src/FA.JustBlog/FA.JustBlog.Data/FA.JustBlog.Data.csproj
@@ -83,6 +83,10 @@
     <Compile Include="Migrations\202108091601278_AddUser.designer.cs">
       <DependentUpon>202108091601278_AddUser.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202108110353018_ChangeSchema.cs" />
+    <Compile Include="Migrations\202108110353018_ChangeSchema.designer.cs">
+      <DependentUpon>202108110353018_ChangeSchema.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -111,6 +115,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202108091601278_AddUser.resx">
       <DependentUpon>202108091601278_AddUser.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202108110353018_ChangeSchema.resx">
+      <DependentUpon>202108110353018_ChangeSchema.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
