--- a/src/FA.JustBlog/FA.JustBlog.WebMVC/Views/Web.config
+++ b/src/FA.JustBlog/FA.JustBlog.WebMVC/Views/Web.config
@@ -24,6 +24,7 @@
 				<add namespace="FA.JustBlog.WebMVC.ViewModels" />
 				<add namespace="FA.JustBlog.Models.Security" />
 				<add namespace="FA.JustBlog.Models.Common" />
+				<add namespace="FA.JustBlog.Common" />
 			</namespaces>
 		</pages>
 	</system.web.webPages.razor>
