--- a/src/FA.JustBlog/FA.JustBlog.WebMVC/FA.JustBlog.WebMVC.csproj
+++ b/src/FA.JustBlog/FA.JustBlog.WebMVC/FA.JustBlog.WebMVC.csproj
@@ -226,9 +226,11 @@
     <Content Include="Assets\css\bootstrap-reboot.min.css" />
     <Content Include="Assets\css\bootstrap.css" />
     <Content Include="Assets\css\bootstrap.min.css" />
+    <Content Include="Assets\css\global.css" />
     <Content Include="Assets\css\Site.css" />
     <Content Include="Assets\css\style.css" />
     <Content Include="Assets\images\about-bg.jpg" />
+    <Content Include="Assets\images\avatar01.png" />
     <Content Include="Assets\images\bg.png" />
     <Content Include="Assets\images\blog-07.jpg" />
     <Content Include="Assets\images\blog-08.jpg" />
@@ -237,6 +239,7 @@
     <Content Include="Assets\images\blog-10.jpg" />
     <Content Include="Assets\images\blog-11.jpg" />
     <Content Include="Assets\images\blog-12.jpg" />
+    <Content Include="Assets\images\blog-13.jpg" />
     <Content Include="Assets\images\blog-2.jpg" />
     <Content Include="Assets\images\blog-3.jpg" />
     <Content Include="Assets\images\blog-4.jpg" />
